Update .gitignore to ignore all files except directories and specific patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-*.[^/]*
-01_helloworld
+# すべてのファイルを無視
+*
+
+# ディレクトリは無視しない (再帰的に .gitignore を適用するため)
+!*/
+
+# ピリオドを含むファイルは無視しない
+!*.*
+
+# DS_Store ファイルは無視
+.DS_Store
